# fastapi-nextjs-vercel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  ty.toml
.agents/skills/: fastapi
.github/workflows/: ci.yml
api/: dependencies.py  main.py  pyproject.toml  test_main.py
api/routes/: users.py
app/: page.spec.tsx  page.tsx
